Add unsaved example edits

--- a/ExampleScoring.ipynb
+++ b/ExampleScoring.ipynb
@@ -1504,89 +1504,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "participant  prompt\n",
-       "1.0          book       2.400000\n",
-       "             bottle     2.000000\n",
-       "             brick      1.600000\n",
-       "             fork       1.500000\n",
-       "             pants      3.000000\n",
-       "             rope       1.428571\n",
-       "             shoe       3.166667\n",
-       "             shovel     2.250000\n",
-       "             table      1.666667\n",
-       "             tire       1.500000\n",
-       "2.0          book       5.800000\n",
-       "             bottle     6.333333\n",
-       "             brick      5.222222\n",
-       "             fork       6.700000\n",
-       "             pants      7.600000\n",
-       "             rope       4.692308\n",
-       "             shoe       4.666667\n",
-       "             shovel     4.166667\n",
-       "             table      7.000000\n",
-       "             tire       5.666667\n",
-       "3.0          book       3.428571\n",
-       "             bottle    22.000000\n",
-       "             brick      1.750000\n",
-       "             fork       1.833333\n",
-       "             pants      1.800000\n",
-       "             rope       4.000000\n",
-       "             shoe       1.333333\n",
-       "             shovel     1.200000\n",
-       "             table      1.250000\n",
-       "             tire       1.200000\n",
-       "                         ...    \n",
-       "90.0         book       3.000000\n",
-       "             bottle     2.375000\n",
-       "             brick      2.800000\n",
-       "             fork       3.600000\n",
-       "             pants      3.333333\n",
-       "             rope       5.000000\n",
-       "             shoe       3.714286\n",
-       "             shovel     2.555556\n",
-       "             table      2.714286\n",
-       "             tire       3.111111\n",
-       "91.0         book       1.222222\n",
-       "             bottle     3.333333\n",
-       "             brick      1.000000\n",
-       "             fork       1.400000\n",
-       "             pants      2.000000\n",
-       "             rope       1.500000\n",
-       "             shoe       1.333333\n",
-       "             shovel     1.666667\n",
-       "             table      1.250000\n",
-       "             tire       3.000000\n",
-       "92.0         book       4.666667\n",
-       "             bottle     3.333333\n",
-       "             brick      3.800000\n",
-       "             fork       4.571429\n",
-       "             pants      4.333333\n",
-       "             rope       5.200000\n",
-       "             shoe       4.000000\n",
-       "             shovel     4.750000\n",
-       "             table      5.000000\n",
-       "             tire       6.333333\n",
-       "Name: elaboration, Length: 901, dtype: float64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.df['elaboration'] = data.df.response.apply(lambda x: len(x.split()))\n",
-    "data.df.groupby(['participant', 'prompt'])['elaboration'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -1752,6 +1669,200 @@
    ],
    "source": [
     "f = data.fluency(wide=True)\n",
+    "f.sample(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Elaboration Data\n",
+    "\n",
+    "By default, this splits on whitespace and counts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>participant</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>elaboration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7784</th>\n",
+       "      <td>57.0</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3668</th>\n",
+       "      <td>81.0</td>\n",
+       "      <td>shoe</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7400</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>book</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      participant prompt  elaboration\n",
+       "7784         57.0  pants            5\n",
+       "3668         81.0   shoe            6\n",
+       "7400         41.0   book            2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = data.elaboration()\n",
+    "f.sample(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"10\" halign=\"left\">elaboration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prompt</th>\n",
+       "      <th>book</th>\n",
+       "      <th>bottle</th>\n",
+       "      <th>brick</th>\n",
+       "      <th>fork</th>\n",
+       "      <th>pants</th>\n",
+       "      <th>rope</th>\n",
+       "      <th>shoe</th>\n",
+       "      <th>shovel</th>\n",
+       "      <th>table</th>\n",
+       "      <th>tire</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>participant</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>44.0</th>\n",
+       "      <td>3.428571</td>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>5.800</td>\n",
+       "      <td>6.166667</td>\n",
+       "      <td>2.571429</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>1.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.0</th>\n",
+       "      <td>1.200000</td>\n",
+       "      <td>2.250000</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>1.375</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>1.333333</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            elaboration                                                 \\\n",
+       "prompt             book    bottle     brick   fork     pants      rope   \n",
+       "participant                                                              \n",
+       "44.0           3.428571  3.333333  3.000000  5.800  6.166667  2.571429   \n",
+       "6.0            1.200000  2.250000  2.333333  1.375  1.500000  1.600000   \n",
+       "\n",
+       "                                         \n",
+       "prompt           shoe shovel table tire  \n",
+       "participant                              \n",
+       "44.0         1.666667   2.25   4.2  1.9  \n",
+       "6.0          1.333333   2.40   2.4  1.0  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = data.elaboration(wide=True)\n",
     "f.sample(2)"
    ]
   }
