--- a/notebooks/AUT-Scoring.ipynb
+++ b/notebooks/AUT-Scoring.ipynb
@@ -38,11 +38,10 @@
    "outputs": [],
    "source": [
     "scorer = ocs.scoring.AUT_Scorer()\n",
-    "scorer.load_model('EN_100_lsa', '/data/tasa/EN_100k.word2vec.bin')\n",
-    "scorer.load_model('TASA_lsa', '/data/tasa/TASA.word2vec.bin')\n",
-    "scorer.load_model('EN_100_lsa', '/data/tasa/EN_100k.word2vec.bin'),\n",
-    "scorer.load_model('word2vec', '/data/word2vec/GoogleNews-vectors-negative300.bin.gz')\n",
-    "scorer.load_model('glove_840B', '/data/glove/glove.840B-300d.word2vec.bin')"
+    "scorer.load_model('EN_100_lsa', '/data/tasa/EN_100k.wv')\n",
+    "scorer.load_model('TASA_lsa', '/data/tasa/TASA.wv')\n",
+    "scorer.load_model('word2vec', '/data/word2vec/GoogleNews-vectors-negative300.bin.gz', format='word2vec')\n",
+    "scorer.load_model('glove_840B', '/data/glove/glove.840B-300d.wv')"
    ]
   },
   {
