--- a/notebooks/ExampleScoring.ipynb
+++ b/notebooks/ExampleScoring.ipynb
@@ -210,8 +210,8 @@
    "outputs": [],
    "source": [
     "scorer = ocs.scoring.AUT_Scorer()\n",
-    "scorer.load_model('EN_100_lsa', '/data/tasa/EN_100k.word2vec.bin')\n",
-    "scorer.load_model('TASA_lsa', '/data/tasa/TASA.word2vec.bin')"
+    "scorer.load_model('EN_100_lsa', '/data/tasa/EN_100k.wv')\n",
+    "scorer.load_model('TASA_lsa', '/data/tasa/TASA.wv')"
    ]
   },
   {
