Update alt elaboration scoring

--- a/notebooks/AUT-Scoring.ipynb
+++ b/notebooks/AUT-Scoring.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = ocs.file.WideData('Measurement study/Response level Data/Boulder Scores/AUT_Coding_ColoradoScores_v2.xlsx')\n",
+    "data = ocs.file.WideData('../Measurement study/Response level Data/Boulder Scores/AUT_Coding_ColoradoScores_v2.xlsx')\n",
     "# Adjust internal representation to support this response-level dataset\n",
     "data.df = data._original.rename(columns={'colorado similarity scores': 'cu_lsa'})[['prompt', \"response\", \"cu_lsa\"]]\n",
     "data.df['response'] = data.df.response.astype(str).apply(data._clean_response)"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,63 +147,63 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>162</th>\n",
-       "      <td>163.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Weapon\\nDoorstop\\nTofu-presser\\nStool\\nHair fl...</td>\n",
-       "      <td>Jumping with friends\\nTying up your partner\\nF...</td>\n",
-       "      <td>Combing your hair\\nStabbing your brother\\nRaki...</td>\n",
-       "      <td>Becoming taller\\nAvoiding rodents\\nOpen-air fo...</td>\n",
-       "      <td>Scarecrow garb\\nExtra sleeves for cold arms\\nS...</td>\n",
-       "      <td>Portable Urinal\\nInstrument (blowing air acros...</td>\n",
-       "      <td>Paperweight\\nDoorstop\\nWeapon\\nStepstool\\nBook...</td>\n",
-       "      <td>Swing\\nRoll it down a hill and see whose stays...</td>\n",
-       "      <td>Weapon\\nPogo sticking without the bounce\\nCrea...</td>\n",
-       "      <td>Weapon\\nPlanter for a small shrub\\nDrinking be...</td>\n",
+       "      <th>70</th>\n",
+       "      <td>71.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Doorstop\\nRead\\nPress flowers\\nPaperweight\\nPr...</td>\n",
+       "      <td>Tie up dog\\nHold a robe closed\\nHold pants up\\...</td>\n",
+       "      <td>Eat\\nPry a jar lid open\\nDig in the dirt\\nScra...</td>\n",
+       "      <td>Eat dinner\\nHold important papers\\nDo homework...</td>\n",
+       "      <td>Wear them\\nTie around your head for sunshade. ...</td>\n",
+       "      <td>Hold liquid\\nHold fireflies\\nEmergency pee bot...</td>\n",
+       "      <td>Build something\\nThrow at something scary\\nSta...</td>\n",
+       "      <td>Drive on it\\nRoll it down a hill for fun\\nPlan...</td>\n",
+       "      <td>Dig flowers\\nChop the head off a snake\\nDig a ...</td>\n",
+       "      <td>Squash a bug\\nWear on your feet\\nDance\\nHold a...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     participant  group                                               book  \\\n",
-       "162        163.0    3.0  Weapon\\nDoorstop\\nTofu-presser\\nStool\\nHair fl...   \n",
+       "    participant  group                                               book  \\\n",
+       "70         71.0    1.0  Doorstop\\nRead\\nPress flowers\\nPaperweight\\nPr...   \n",
        "\n",
-       "                                                  rope  \\\n",
-       "162  Jumping with friends\\nTying up your partner\\nF...   \n",
+       "                                                 rope  \\\n",
+       "70  Tie up dog\\nHold a robe closed\\nHold pants up\\...   \n",
        "\n",
-       "                                                  fork  \\\n",
-       "162  Combing your hair\\nStabbing your brother\\nRaki...   \n",
+       "                                                 fork  \\\n",
+       "70  Eat\\nPry a jar lid open\\nDig in the dirt\\nScra...   \n",
        "\n",
-       "                                                 table  \\\n",
-       "162  Becoming taller\\nAvoiding rodents\\nOpen-air fo...   \n",
+       "                                                table  \\\n",
+       "70  Eat dinner\\nHold important papers\\nDo homework...   \n",
        "\n",
-       "                                                 pants  \\\n",
-       "162  Scarecrow garb\\nExtra sleeves for cold arms\\nS...   \n",
+       "                                                pants  \\\n",
+       "70  Wear them\\nTie around your head for sunshade. ...   \n",
        "\n",
-       "                                                bottle  \\\n",
-       "162  Portable Urinal\\nInstrument (blowing air acros...   \n",
+       "                                               bottle  \\\n",
+       "70  Hold liquid\\nHold fireflies\\nEmergency pee bot...   \n",
        "\n",
-       "                                                 brick  \\\n",
-       "162  Paperweight\\nDoorstop\\nWeapon\\nStepstool\\nBook...   \n",
+       "                                                brick  \\\n",
+       "70  Build something\\nThrow at something scary\\nSta...   \n",
        "\n",
-       "                                                  tire  \\\n",
-       "162  Swing\\nRoll it down a hill and see whose stays...   \n",
+       "                                                 tire  \\\n",
+       "70  Drive on it\\nRoll it down a hill for fun\\nPlan...   \n",
        "\n",
-       "                                                shovel  \\\n",
-       "162  Weapon\\nPogo sticking without the bounce\\nCrea...   \n",
+       "                                               shovel  \\\n",
+       "70  Dig flowers\\nChop the head off a snake\\nDig a ...   \n",
        "\n",
-       "                                                  shoe  \n",
-       "162  Weapon\\nPlanter for a small shrub\\nDrinking be...  "
+       "                                                 shoe  \n",
+       "70  Squash a bug\\nWear on your feet\\nDance\\nHold a...  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = file.WideData('AlternateUses_ActorStudy.xls')\n",
+    "data = ocs.file.WideData('../AlternateUses_ActorStudy.xls')\n",
     "data._original.sample(1)"
    ]
   },
@@ -250,9 +250,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_wide().to_csv('data/AUT_actor_all.csv')\n",
-    "data.to_wide(aggfunc='max').to_csv('data/AUT_actor_all_responsemax.csv')\n",
-    "data.fluency(wide=True).to_csv('data/AUT_actor_fluency.csv')"
+    "data.to_wide().to_csv('../data/AUT_actor_all.csv')\n",
+    "data.to_wide(aggfunc='max').to_csv('../data/AUT_actor_all_responsemax.csv')\n",
+    "data.fluency(wide=True).to_csv('../data/AUT_actor_fluency.csv')\n",
+    "for elabfunc in ['whitespace', 'idf', 'stoplist', 'pos']:\n",
+    "    data.elaboration(scorer, wide=True, elabfunc=elabfunc).to_csv(\"../data/AUT_actor_elaboration_{}.csv\".format(elabfunc))"
    ]
   },
   {
