--- a/notebooks/AUT-Scoring.ipynb
+++ b/notebooks/AUT-Scoring.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Crunching: glove_idf_exclude_target\n"
+     ]
+    }
+   ],
    "source": [
     "params = [\n",
     "    dict(name='glove', model='glove_840B', idf=False, stop=False),\n",
     "    dict(name='glove_idf', model='glove_840B', idf=True, stop=True),\n",
+    "    dict(name='glove_idf_exclude_target', model='glove_840B', idf=True, stop=True, exclude_target=True),\n",
     "    dict(name='word2vec', model='word2vec', idf=False, stop=False),\n",
     "    dict(name='word2vec_idf', model='word2vec', idf=True, stop=True),\n",
     "    dict(name='tasa_lsa', model='TASA_lsa', idf=False, stop=False),\n",
@@ -79,9 +88,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response</th>\n",
+       "      <th>cu_lsa</th>\n",
+       "      <th>glove</th>\n",
+       "      <th>glove_idf</th>\n",
+       "      <th>glove_idf_exclude_target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1941</th>\n",
+       "      <td>Pants</td>\n",
+       "      <td>to use as a pattern to sew more pants</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.661354</td>\n",
+       "      <td>0.443489</td>\n",
+       "      <td>0.653113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1847</th>\n",
+       "      <td>Pants</td>\n",
+       "      <td>scarf</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.418537</td>\n",
+       "      <td>0.418537</td>\n",
+       "      <td>0.418537</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     prompt                               response  cu_lsa     glove  \\\n",
+       "1941  Pants  to use as a pattern to sew more pants    0.37  0.661354   \n",
+       "1847  Pants                                  scarf    0.37  0.418537   \n",
+       "\n",
+       "      glove_idf  glove_idf_exclude_target  \n",
+       "1941   0.443489                  0.653113  \n",
+       "1847   0.418537                  0.418537  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.df.sample(2)"
    ]
@@ -107,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -147,57 +223,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>71.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Doorstop\\nRead\\nPress flowers\\nPaperweight\\nPr...</td>\n",
-       "      <td>Tie up dog\\nHold a robe closed\\nHold pants up\\...</td>\n",
-       "      <td>Eat\\nPry a jar lid open\\nDig in the dirt\\nScra...</td>\n",
-       "      <td>Eat dinner\\nHold important papers\\nDo homework...</td>\n",
-       "      <td>Wear them\\nTie around your head for sunshade. ...</td>\n",
-       "      <td>Hold liquid\\nHold fireflies\\nEmergency pee bot...</td>\n",
-       "      <td>Build something\\nThrow at something scary\\nSta...</td>\n",
-       "      <td>Drive on it\\nRoll it down a hill for fun\\nPlan...</td>\n",
-       "      <td>Dig flowers\\nChop the head off a snake\\nDig a ...</td>\n",
-       "      <td>Squash a bug\\nWear on your feet\\nDance\\nHold a...</td>\n",
+       "      <th>130</th>\n",
+       "      <td>131.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>reading\\nstudying\\nlearning\\nscrapbooking\\ndoo...</td>\n",
+       "      <td>reaching someone who's falling off a cliff\\nco...</td>\n",
+       "      <td>eating\\nhair combing\\nas a substitute spoon if...</td>\n",
+       "      <td>eating off of\\nwriting on\\nstanding on to reac...</td>\n",
+       "      <td>wearing\\nchanging your gender presentation\\npu...</td>\n",
+       "      <td>Drinking out of\\nsending a message across the ...</td>\n",
+       "      <td>building\\nstepping on\\npainting on\\nthrowing a...</td>\n",
+       "      <td>driving on\\nflipping over as a part of cross-f...</td>\n",
+       "      <td>digging\\nshoveling snow\\nhitting a ball\\ngetti...</td>\n",
+       "      <td>wearing\\nfilling with pennies\\nthrowing at a l...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    participant  group                                               book  \\\n",
-       "70         71.0    1.0  Doorstop\\nRead\\nPress flowers\\nPaperweight\\nPr...   \n",
+       "     participant  group                                               book  \\\n",
+       "130        131.0    3.0  reading\\nstudying\\nlearning\\nscrapbooking\\ndoo...   \n",
        "\n",
-       "                                                 rope  \\\n",
-       "70  Tie up dog\\nHold a robe closed\\nHold pants up\\...   \n",
+       "                                                  rope  \\\n",
+       "130  reaching someone who's falling off a cliff\\nco...   \n",
        "\n",
-       "                                                 fork  \\\n",
-       "70  Eat\\nPry a jar lid open\\nDig in the dirt\\nScra...   \n",
+       "                                                  fork  \\\n",
+       "130  eating\\nhair combing\\nas a substitute spoon if...   \n",
        "\n",
-       "                                                table  \\\n",
-       "70  Eat dinner\\nHold important papers\\nDo homework...   \n",
+       "                                                 table  \\\n",
+       "130  eating off of\\nwriting on\\nstanding on to reac...   \n",
        "\n",
-       "                                                pants  \\\n",
-       "70  Wear them\\nTie around your head for sunshade. ...   \n",
+       "                                                 pants  \\\n",
+       "130  wearing\\nchanging your gender presentation\\npu...   \n",
        "\n",
-       "                                               bottle  \\\n",
-       "70  Hold liquid\\nHold fireflies\\nEmergency pee bot...   \n",
+       "                                                bottle  \\\n",
+       "130  Drinking out of\\nsending a message across the ...   \n",
        "\n",
-       "                                                brick  \\\n",
-       "70  Build something\\nThrow at something scary\\nSta...   \n",
+       "                                                 brick  \\\n",
+       "130  building\\nstepping on\\npainting on\\nthrowing a...   \n",
        "\n",
-       "                                                 tire  \\\n",
-       "70  Drive on it\\nRoll it down a hill for fun\\nPlan...   \n",
+       "                                                  tire  \\\n",
+       "130  driving on\\nflipping over as a part of cross-f...   \n",
        "\n",
-       "                                               shovel  \\\n",
-       "70  Dig flowers\\nChop the head off a snake\\nDig a ...   \n",
+       "                                                shovel  \\\n",
+       "130  digging\\nshoveling snow\\nhitting a ball\\ngetti...   \n",
        "\n",
-       "                                                 shoe  \n",
-       "70  Squash a bug\\nWear on your feet\\nDance\\nHold a...  "
+       "                                                  shoe  \n",
+       "130  wearing\\nfilling with pennies\\nthrowing at a l...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +293,6 @@
      "output_type": "stream",
      "text": [
       "Crunching: glove\n",
-      "Column glove already exists. Re-crunching and re-writing.\n",
       "Crunching: glove_idf\n",
       "Crunching: word2vec\n",
       "Crunching: word2vec_idf\n",
@@ -246,15 +321,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "data.to_wide().to_csv('../data/AUT_actor_all.csv')\n",
     "data.to_wide(aggfunc='max').to_csv('../data/AUT_actor_all_responsemax.csv')\n",
     "data.fluency(wide=True).to_csv('../data/AUT_actor_fluency.csv')\n",
-    "for elabfunc in ['whitespace', 'idf', 'stoplist', 'pos']:\n",
+    "for elabfunc in ['whitespace', 'tokenized', 'idf', 'stoplist', 'pos']:\n",
     "    data.elaboration(scorer, wide=True, elabfunc=elabfunc).to_csv(\"../data/AUT_actor_elaboration_{}.csv\".format(elabfunc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for elabfunc in ['whitespace', 'tokenized', 'idf', 'stoplist', 'pos']:\n",
+    "    data.elaboration(scorer, wide=True, elabfunc=elabfunc).to_csv(\"../data/AUT_actor_elaboration_{}.csv\".format(elabfunc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Driving on [2, 2, 1, 1, 2.657463258359006]\n",
+      "Hang from a tree and swing on it [8, 8, 3, 3, 8.165535891866764]\n",
+      "Stack to plant potatoes [4, 4, 3, 3, 8.392362770892634]\n",
+      "Cut into pieces and turn into rubber erasers [8, 8, 5, 5, 14.520865708577166]\n",
+      "Cut into pieces, and turn into rubber erasers [8, 8, 5, 5, 14.520865708577166]\n",
+      "Flipping over as part of cross-fit training  [7, 8, 5, 4, 12.860134031889935]\n",
+      "Put it on the ground, fill it with cat litter, it's a litterbox [13, 14, 7, 5, 15.133124891437186]\n"
+     ]
+    }
+   ],
+   "source": [
+    "    for response in ['Driving on',\n",
+    "        'Hang from a tree and swing on it',\n",
+    "        'Stack to plant potatoes',\n",
+    "        'Cut into pieces and turn into rubber erasers',\n",
+    "        'Cut into pieces, and turn into rubber erasers',\n",
+    "        'Flipping over as part of cross-fit training ',\n",
+    "        'Put it on the ground, fill it with cat litter, it\\'s a litterbox'\n",
+    "        ]:\n",
+    "        score = [scorer.elaboration(response, elabfunc) for elabfunc in ['whitespace', 'tokenized', 'pos', 'stoplist', 'idf']]\n",
+    "        print(response, score)"
    ]
   },
   {
@@ -2070,7 +2187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
