--- a/notebooks/reshape-participant-level.ipynb
+++ b/notebooks/reshape-participant-level.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,6 +394,127 @@
     "combined = df.groupby(['Prompt', 'Response'], as_index=False).mean().sort_values('Violent', ascending=False)\n",
     "combined.columns = combined.columns.str.lower()\n",
     "combined[['prompt', 'response', 'violent', 'sexual']].to_csv('data/violent_ground_truth.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response</th>\n",
+       "      <th>originality</th>\n",
+       "      <th>violent</th>\n",
+       "      <th>violent_category</th>\n",
+       "      <th>sexual</th>\n",
+       "      <th>sexual_category</th>\n",
+       "      <th>colorado similarity scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1109</th>\n",
+       "      <td>Brick</td>\n",
+       "      <td>keep behind door for protection</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442</th>\n",
+       "      <td>Book</td>\n",
+       "      <td>torture device</td>\n",
+       "      <td>2.666667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3828</th>\n",
+       "      <td>shoe</td>\n",
+       "      <td>throw it at people</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3829</th>\n",
+       "      <td>shoe</td>\n",
+       "      <td>throw it at somebody</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>Book</td>\n",
+       "      <td>weapon</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     prompt                         response  originality  violent  \\\n",
+       "1109  Brick  keep behind door for protection     2.000000      1.0   \n",
+       "442    Book                   torture device     2.666667      1.0   \n",
+       "3828   shoe               throw it at people     1.666667      1.0   \n",
+       "3829   shoe             throw it at somebody     1.666667      1.0   \n",
+       "476    Book                           weapon     3.000000      1.0   \n",
+       "\n",
+       "      violent_category  sexual  sexual_category  colorado similarity scores  \n",
+       "1109               4.0     0.0              0.0                        0.21  \n",
+       "442                3.5     0.0              0.0                        0.09  \n",
+       "3828               2.0     0.0              0.0                        0.23  \n",
+       "3829               2.0     0.0              0.0                        0.32  \n",
+       "476                5.0     0.0              0.0                        0.07  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined.to_csv('../data/paca-creativity.csv.gz', compression='gzip')"
    ]
   }
  ],
