--- a/notebooks/LLM-AUT-Scoring.ipynb
+++ b/notebooks/LLM-AUT-Scoring.ipynb
@@ -12,13 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from gensim.models import KeyedVectors\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import open_scoring as ocs"
    ]
   },
@@ -26,18 +23,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load a GPT-3 Scorer."
+    "## Load a GPT-3 Scorer\n",
+    "\n",
+    "GPT-3 is a text mining architecture provided by OpenAI - our finetuned models are hosted on their systems and accessed through an API. The benefit of this is accessibility - you don't need fancy systems to run the large language model, because *they* have the model on a fancy system that you can talk to. The downside is that there are costs involve to using it, and you need an account with OpenAI to do so.\n",
+    "\n",
+    "### Creating an API Key\n",
+    "\n",
+    "1. Sign up for an [account a openai.com](https://beta.openai.com/signup)\n",
+    "2. Make an API Key here: https://beta.openai.com/account/api-keys\n",
+    "3. Run the code below, and paste your API key when prompted."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# point to a text file with your openai key\n",
-    "# create one here: https://beta.openai.com/account/api-keys\n",
-    "scorer = ocs.scoring.GPT_Scorer(openai_key_path= '/Users/peter.organisciak/openai-key.txt')"
+    "# create one here: \n",
+    "scorer = ocs.scoring.GPT_Scorer()"
    ]
   },
   {
@@ -49,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +63,7 @@
        "1.3"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +90,7 @@
        "3.0"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +103,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To change the model:"
+    "## Using a different model\n",
+    "\n",
+    "A number of models are included and pre-trained:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ada', 'babbage', 'curie', 'davinci']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scorer.models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To use a difference model, supply a `model` argument:"
    ]
   },
   {
@@ -125,7 +159,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or score many responses at once:"
+    "Bigger models are costlier. Davinci works best, but can score only about `450` responses for a dollar, where ada can score 34000 and babbage can score about 23000. 'babbage' or 'curie' are a good trade-off in cost vs performance.\n",
+    "\n",
+    "Prices are listed at https://openai.com/api/pricing/, under \"Fine-tuned models\" > \"Usage\". Here is howhow many responses could be scored for a dollar, based on past studies performed in Summer 2022:\n",
+    "\n",
+    "| model        |   responses/dollar |\n",
+    "|:-------------|-------------------:|\n",
+    "| gpt3-ada     |              33966 |\n",
+    "| gpt3-babbage |              22644 |\n",
+    "| gpt3-curie   |               4529 |\n",
+    "| gpt3-davinci |                453 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scoring Many Responses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's how to score many responses at once:"
    ]
   },
   {
@@ -159,70 +216,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rating a file\n",
-    "Load some data:"
+    "If you're working from a DataFrame of data - a popular data science structure in Python - here's how you might score as a batch. First, I'll create a sample DataFrame. In a real-world setting you might load this data, with a function like [`pd.read_excel`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_excel.html) or [`pd.read_csv`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_csv.html)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/peter.organisciak/Documents/projects/open-scoring/open_scoring/file.py:25: FutureWarning: convert_float is deprecated and will be removed in a future version.\n",
-      "  self._original = pd.read_excel(filename, convert_float=False).rename(columns={participant_id:'participant'})\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = ocs.file.WideData('../data/AUT_Coding_ColoradoScores_v2.xlsx')\n",
-    "# Adjust internal representation to support this response-level dataset\n",
-    "data.df = data._original.rename(columns={'colorado similarity scores': 'cu_lsa'})[['prompt', \"response\", \"cu_lsa\"]]\n",
-    "data.df['response'] = data.df.response.astype(str).apply(data._clean_response)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Model options are *ada*, *babbage*, *curie*, and *davinci*, each with different [costs](https://openai.com/api/pricing/)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Crunching: ada\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 9/9 [00:04<00:00,  2.01it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "params = [\n",
-    "    dict(name='ada', model='ada'),\n",
-    "]\n",
-    "for param in params:\n",
-    "    print(\"Crunching:\", param['name'])\n",
-    "    data.score(scorer, **param)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -248,48 +247,80 @@
        "      <th></th>\n",
        "      <th>prompt</th>\n",
        "      <th>response</th>\n",
-       "      <th>cu_lsa</th>\n",
-       "      <th>ada</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1710</th>\n",
-       "      <td>Fork</td>\n",
-       "      <td>tent stake</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>3.5</td>\n",
+       "      <th>0</th>\n",
+       "      <td>brick</td>\n",
+       "      <td>use as a paperweight</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2398</th>\n",
-       "      <td>Rope</td>\n",
-       "      <td>covering a basket</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>2.7</td>\n",
+       "      <th>1</th>\n",
+       "      <td>rope</td>\n",
+       "      <td>dip the end in sugar and use to lure a raccoon...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     prompt           response  cu_lsa  ada\n",
-       "1710   Fork         tent stake    0.14  3.5\n",
-       "2398   Rope  covering a basket    0.24  2.7"
+       "  prompt                                           response\n",
+       "0  brick                               use as a paperweight\n",
+       "1   rope  dip the end in sugar and use to lure a raccoon..."
       ]
      },
-     "execution_count": 110,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.df.sample(2)"
+    "# This is just sample data\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame([['brick', 'use as a paperweight'], ['rope', 'dip the end in sugar and use to lure a raccoon closer to you']], columns=['prompt', 'response'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's how that DataFrame may be scored."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:02<00:00,  2.41s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1.5, 4.1]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['scores'] = scorer.originality_batch(df.prompt, df.response, model='davinci')\n",
+    "df"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.4 ('ocstest')",
    "language": "python",
    "name": "python3"
   },
@@ -303,11 +334,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "e93f6973baf80d840d9d6715f091ca11c0bba5902c2f522aa0ee562f8ebeaf67"
+    "hash": "23c8637676406ba2ac52314b4f9098abb1673d6525a999746607efafd3e21141"
    }
   }
  },
