Update LLM examples to include API instructions

--- a/notebooks/LLM-AUT-Scoring.ipynb
+++ b/notebooks/LLM-AUT-Scoring.ipynb
@@ -1,21 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "# Using Open Creativity Scoring for Large Language Model Scoring\n",
+    "\n",
+    "*To run this code, use the play buttons to the left of the code cells/*\n",
+    "\n",
+    "First, install the OCS library and import it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install -qq Open-Creativity-Scoring\n",
     "import open_scoring as ocs"
    ]
   },
@@ -25,11 +27,11 @@
    "source": [
     "## Load a GPT-3 Scorer\n",
     "\n",
-    "GPT-3 is a text mining architecture provided by OpenAI - our finetuned models are hosted on their systems and accessed through an API. The benefit of this is accessibility - you don't need fancy systems to run the large language model, because *they* have the model on a fancy system that you can talk to. The downside is that there are costs involve to using it, and you need an account with OpenAI to do so.\n",
+    "GPT-3 is a text mining architecture provided by OpenAI - our finetuned models are hosted on their systems and accessed through an API. The benefit of this is accessibility - you don't need fancy systems to run the large language model, because *they* have the model on a fancy system that you can talk to. The downside is that there are costs involve to using it (between `450` and `34000` scored responses for a dollar depending on which model is used), and you need an account with OpenAI.\n",
     "\n",
     "### Creating an API Key\n",
     "\n",
-    "1. Sign up for an [account a openai.com](https://beta.openai.com/signup)\n",
+    "1. Sign up for an [account with openai.com](https://beta.openai.com/signup), and link a payment method. You can set a hard-limit on spending, if need be.\n",
     "2. Make an API Key here: https://beta.openai.com/account/api-keys\n",
     "3. Run the code below, and paste your API key when prompted."
    ]
