Remove old comment

--- a/notebooks/LLM-AUT-Scoring.ipynb
+++ b/notebooks/LLM-AUT-Scoring.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/massivetexts/open-scoring/blob/master/notebooks/LLM-AUT-Scoring.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -60,8 +60,6 @@
       },
       "outputs": [],
       "source": [
-        "# point to a text file with your openai key\n",
-        "# create one here: \n",
         "scorer = ocs.scoring.GPT_Scorer()"
       ]
     },
@@ -378,6 +376,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3.10.4 ('ocstest')",
       "language": "python",
@@ -399,10 +401,6 @@
       "interpreter": {
         "hash": "23c8637676406ba2ac52314b4f9098abb1673d6525a999746607efafd3e21141"
       }
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
